--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <title>Web Bluetooth Blink Arduino101</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="fonts/fontawesome-webfont.ttf"/>
+    <link rel="stylesheet" type="text/css" href="jiwan2ne1.github.io/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="jiwan2ne1.github.io/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="jiwan2ne1.github.io/fonts/fontawesome-webfont.ttf"/>
   </head>
   <body>
     <br/>
     <h1 class="title"> Web Bluetooth Arduino101 LED Blink!</h1>
 
     <div class="page-content">
-      <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="images/leds.svg"></object>
+      <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="jiwan2ne1.github.io/images/leds.svg"></object>
       </div>
     </div>
   </body>
