--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <br/>
-    <h1 class="title"> Web Bluetooth Arduino101 LED Blink!</h1>
+    <h1 class="title"> Hi Jiwan</h1>
 
     <div class="page-content">
       <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="jiwan2ne1.github.io/images/leds.svg"></object>
