--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="title"> Hi Jiwan sup</h1>
 
     <div class="page-content">
-      <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="jiwan2ne1.github.io/images/leds.svg"></object>
+      <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="images/leds.svg"></object>
       </div>
     </div>
   </body>
