corgi pics and index.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   </head>
   <body>
     <br/>
-    <h1 class="title"> Hi Jiwan sup</h1>
-
+    <h1 class="title"> HOLY FUCKING SHIT</h1>
+    <script href='jiwan2ne1.github.io/led.js'></script>
+    <script href='jiwan2ne1.github.io/app.js'></script>
     <div class="page-content">
-      <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="jiwan2ne1.github.io/images/leds.svg"></object>
+        <img src = "images/happypic.jpg" height="100" width="100" id="blecircle" onclick = "bleConnect(this.id)">
+        <img src = "images/scaredpic.jpg" height="100" width="100" id="circle1" onclick = "lightIt(this.id)">
+        <img src = "images/happypic.jpg" height="100" width="100" id="circle2" onclick = "lightIt(this.id)">
+        <img src = "images/scaredpic.jpg" height="100" width="100" id="circle3" onclick = "lightIt(this.id)">
+        <img src = "images/scaredpic.jpg" height="100" width="100" id="circle4" onclick = "lightIt(this.id)">
+     <!-- <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="jiwan2ne1.github.io/images/leds.svg"></object>-->
       </div>
     </div>
   </body>
