--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <br/>
     <h1 class="title"> HOLY FUCKING SHIT</h1>
-    <script href='jiwan2ne1.github.io/led.js'></script>
-    <script href='jiwan2ne1.github.io/app.js'></script>
+    
     <div class="page-content">
-        <img src = "images/happypic.jpg" height="100" width="100" id="blecircle" onclick = "bleConnect(this.id)">
+        <script href='jiwan2ne1.github.io/led.js'></script>
+        <script href='jiwan2ne1.github.io/app.js'></script>
+        <img src = "images/happypic.jpg" height="100" width="100" id="blecircle" onclick = "bleConnect(this.id)"/>
         <img src = "images/scaredpic.jpg" height="100" width="100" id="circle1" onclick = "lightIt(this.id)">
         <img src = "images/happypic.jpg" height="100" width="100" id="circle2" onclick = "lightIt(this.id)">
         <img src = "images/scaredpic.jpg" height="100" width="100" id="circle3" onclick = "lightIt(this.id)">
