--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <h1 class="title"> HOLY FUCKING SHIT</h1>
     
     <div class="page-content">
-        <script href='jiwan2ne1.github.io/led.js'></script>
-        <script href='jiwan2ne1.github.io/app.js'></script>
+        <script src='./led.js'></script>
+        <script src='./app.js'></script>
+        
         <img src = "images/happypic.jpg" height="100" width="100" id="blecircle" onclick = "bleConnect(this.id)"/>
         <img src = "images/scaredpic.jpg" height="100" width="100" id="circle1" onclick = "lightIt(this.id)">
         <img src = "images/happypic.jpg" height="100" width="100" id="circle2" onclick = "lightIt(this.id)">
