--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <br/>
-    <h1 class="title"> HOLY FUCKING SHIT</h1>
+    <h1 class="title"> LDR Lights with Corgis!</h1>
     
     <div class="page-content">
         <script src='./led.js'></script>
