--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <div class="page-content">
         <script src='./led.js'></script>
         <script src='./app.js'></script>
-        
+        <div style="text-align:center;">
         <img src = "images/bluetooth.png" height="100" width="100" id="blecircle" onclick = "bleConnect(this.id)"/>
         <img src = "images/scaredpic.jpg" height="100" width="100" id="circle1" onclick = "lightIt(this.id)">
         <img src = "images/happypic.jpg" height="100" width="100" id="circle2" onclick = "lightIt(this.id)">
         <img src = "images/tiredpic.jpg" height="100" width="100" id="circle3" onclick = "lightIt(this.id)">
         <img src = "images/sadpic.jpg" height="100" width="100" id="circle4" onclick = "lightIt(this.id)">
+        </div>
      <!-- <div style="text-align:center;"><object id="ui-svg" width="825" height="900" type="image/svg+xml" data="jiwan2ne1.github.io/images/leds.svg"></object>-->
     </div>
   </body>
