arduino code changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Web Bluetooth Blink Arduino101</title>
+    <title>M117 Project Winter 2018</title>
     <link rel="stylesheet" type="text/css" href="jiwan2ne1.github.io/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="jiwan2ne1.github.io/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="jiwan2ne1.github.io/fonts/fontawesome-webfont.ttf"/>
