--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <script src='./led.js'></script>
         <script src='./app.js'></script>
         
-        <div  style="text-align:center; position:absolute; left:150px">
+        <div style="text-align:center; position:absolute; left:150px; width:1500px">
             <div class="gallery">
                 <img src = "images/bluetooth.png" height="100" id="blecircle" onclick = "bleConnect(this.id)"/>
             <div class="desc">Bluetooth (called blink)</div>
