--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="page-content" style="width: 1500px"> <!-- OUTER DIV-->
         <div class="row" style="width: 100%; height 100px;">
             <h1 class="title" style="margin: 0 auto; width: 500; text-align: center; margin: 40px"> LDR Lights with Corgis!</h1>
-            <img src = "images/bluetooth.png" height="100" id="blecircle" onclick = "bleConnect(this.id)" style="position: fixed; left: 30px; top: 10px;"/>
-            <div class="desc" style="position: fixed; left: 10px; top: 110px;">Bluetooth <br /> (called blink)</div>
+            <img src = "images/bluetooth.png" height="100" id="blecircle" onclick = "bleConnect(this.id)" style="position: absolute; left: 30px; top: 10px;"/>
+            <div class="desc" style="position: absolute; left: 10px; top: 110px;">Bluetooth <br /> (called blink)</div>
         </div>
         <div class="row" style="width: 100%; height: 200px;">
             <div class="col-sm-2">
