--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
     <script src='./app.js'></script>
   </head>
   <body>
-    <br/>
       
-      <div class="page-content" style="width: 1500px"> <!-- OUTER DIV-->
+      <div class="container" style="width: 1500px"> <!-- OUTER DIV-->
         <div class="row" style="width: 100%; height 100px;">
             <h1 class="title" style="margin: 0 auto; width: 500; text-align: center; margin: 40px"> LDR Lights with Corgis!</h1>
             <img src = "images/bluetooth.png" height="100" id="blecircle" onclick = "bleConnect(this.id)" style="position: absolute; left: 30px; top: 10px;"/>
