--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             height:100%;
             overflow: hidden;
         }
-        div.col-sm-2{
+        div.col-xs-2{
             height: 100%;
         }
         div.gallery img {
