--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             overflow: hidden;
         }
         div.col-xs-2{
-            height: 100%;
+            height: 100px;
         }   
 
         div.desc {
