--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src = "images/bluetooth.png" height="100" id="blecircle" onclick = "bleConnect(this.id)" style="position: absolute; left: 30px; top: 10px;"/>
             <div class="desc" style="position: absolute; left: 10px; top: 110px;">Bluetooth <br /> (called blink)</div>
         </div>
-        <div class="row" style="width: 100%; height: 200px; position: absolute; top: 200px;">
+        <div class="row" style="width: 100%; height: 200px;">
             <div class="col-xs-2">
             </div>
             <div class="col-xs-2">
@@ -71,7 +71,7 @@
             <div class="col-xs-2">
             </div>
         </div>
-        <div class="row" style="width: 100%; height: 20px; position: absolute; top: 400px;">
+        <div class="row" style="width: 100%; height: 20px;">
             <div class="col-xs-2">
             </div>
             <div class="col-xs-2">
