--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
             height:100%;
             overflow: hidden;
         }
+        div.col-xs-2{
+          height: 100%;
+        }
 
         div.desc {
         padding: 15px;
@@ -40,29 +43,25 @@
             </div>
             <div class="col-xs-2">
                 <div class = "imag">
-                    <img src = "images/scaredpic.jpg" height="100%" id="circle1" onclick = "lightIt(this.id)">
-                  
+                    <img src = "images/scaredpic.jpg" height="100%" id="circle1" onclick = "lightIt(this.id)">                  
                 </div>
             </div>
 
             <div class="col-xs-2">
                 <div class = "imag">
                     <img src = "images/happypic.jpg" height="100%" id="circle2" onclick = "lightIt(this.id)">
-                    <div class="desc">Happy</div>
                 </div>
             </div>
 
             <div class="col-xs-2">
                 <div class = "imag">
                     <img src = "images/tiredpic.jpg" height="100%" id="circle3" onclick = "lightIt(this.id)">
-                    <div class="desc">Tired</div>
                 </div>
             </div>
             
             <div class="col-xs-2">
                 <div class = "imag">
                     <img src = "images/sadpic.jpg" height="100%" id="circle4" onclick = "lightIt(this.id)">
-                    <div class="desc">Sad</div>
                 </div>
             </div>
             <div class="col-xs-2">
